--- a/catalog.html
+++ b/catalog.html
@@ -9,38 +9,40 @@
 
 <body>
   <header class="main-header">
-    <a class="logo" href="index.html">
-      <img src="images/logo-sedona.svg" width="140" height="70" alt="логотип города Sedona">
-    </a>
-    <nav class="navigation">
-      <ul class="site-navigation">
-        <li class="site-navigation-item">
-          <a class="navigation-link" href="index.html">Главная</a>
-        </li>
-        <li class="site-navigation-item">
-          <a class="navigation-link" href="about.html">О седоне</a>
-        </li>
-        <li class="site-navigation-item">
-          <a class="navigation-link" href="catalog.html">Гостиницы</a>
-        </li>
-      </ul>
-      <ul class="menu">
-        <li class="menu-item">
-          <a class="menu-link" href="#">
-            <span class="visually-hidden">Поиск гостиницы</span>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-link" href="#">
-            <span class="visually-hidden">избранное</span>
-            <span class="notification-badge">12</span>
-          </a>
-        </li>
-        <li class="menu-item">
-          <a class="menu-button" href="#">Хочу сюда!</a>
-        </li>
-      </ul>
-    </nav>
+    <div class="header-container">
+      <a class="logo" href="index.html">
+        <img src="images/logo-sedona.svg" width="140" height="70" alt="логотип города Sedona">
+      </a>
+      <nav class="navigation">
+        <ul class="site-navigation">
+          <li class="site-navigation-item">
+            <a class="navigation-link" href="index.html">Главная</a>
+          </li>
+          <li class="site-navigation-item">
+            <a class="navigation-link" href="about.html">О седоне</a>
+          </li>
+          <li class="site-navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="menu">
+          <li class="menu-item">
+            <a class="menu-link" href="#">
+              <span class="visually-hidden">Поиск гостиницы</span>
+            </a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="#">
+              <span class="visually-hidden">избранное</span>
+              <span class="notification-badge">12</span>
+            </a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-button" href="#">Хочу сюда!</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </header>
   <main class="main-inner">
     <section class="filter-background">
