--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-site">
     <header class="main-header">
       <div class="header-container">
         <a class="logo" href="index.html">
