--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <h2 class="visually-hidden">Преимущества Седоны</h2>
       <ul class="advantages-list">
         <li class="advantages-item advantages-item-wide">
-          <div>
+          <div class="advantages-item-container">
             <h3>Настоящий городок</h3>
             <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
