--- a/5/index.html
+++ b/5/index.html
@@ -63,31 +63,27 @@
               <h3>Настоящий городок</h3>
               <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
-          </li>
-          <li>
             <div class="advantages-item-img">
               <img src="images/photo-1.jpg" width="800" height="385" alt="улица города">
-              <div>
+            </div>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item advantages-item-text ">
             <h3>Небольшая площадь</h3>
             <p>Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item advantages-item-text ">
             <h3>Красивая дорога</h3>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item advantages-item-text ">
             <h3>Мало туристов</h3>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="advantages-item advantages-item-wide">
-            <div>
+            <div class="advantages-item-text ">
               <h3>Там есть мост дьявола</h3>
               <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
-          </li>
-          <li>
             <div class="advantages-item-img">
               <img src="images/photo-2.jpg" width="800" height="385" alt="каньён">
             </div>
