--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         <img class="welcome" src="images/welcome-sedona.svg" width="458" height="352" alt="добро пожаловать в Седону">
       </section>
       <div class="hero-advantages">
-        <p class="lead">Седона — небольшой городок в Аризоне,заслуживающий большего!</p>
+        <p class="lead">Седона — небольшой городок в Аризоне,
+          заслуживающий большего!</p>
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </div>
       <section class="advantages">
