--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </section>
       <div class="search-hotel">
         <p class="search-hotel-question">Заинтересовались?</p>
-        <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p>Укажите предполагаемые даты поездки,</br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="search-hotel-button" href="#">Поиск гостиницы в Седоне</a>
       </div>
       <section class="subscription">
