--- a/index.html
+++ b/index.html
@@ -110,18 +110,22 @@
       </section>
       <div class="search-hotel">
         <p class="search-hotel-question">Заинтересовались?</p>
-        <p>Укажите предполагаемые даты поездки,</br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p>Укажите предполагаемые даты поездки,
+          <br>и мы покажем вам лучшие предложения гостиниц в Седоне
+        </p>
         <a class="search-hotel-button" href="#">Поиск гостиницы в Седоне</a>
       </div>
       <section class="subscription">
-        <h2>Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
-          <label for="subscription-email">Email</label>
-          <input class="field" placeholder="email@example.ru" type="email" name="subscription-email"
-            id="subscription-email" required>
-          <button class="button subscription-button" type="submit">Подписаться</button>
-        </form>
+        <div class="subscription-container">
+          <h2>Подпишитесь на рассылку</h2>
+          <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
+            <label for="subscription-email">Email</label>
+            <input class="field" placeholder="email@example.ru" type="email" name="subscription-email"
+              id="subscription-email" required>
+            <button class="button subscription-button" type="submit">Подписаться</button>
+          </form>
+        </div>
       </section>
     </main>
     <footer class="main-footer">
