--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li class="menu-item">
               <a class="menu-link" href="#">
                 <span class="visually-hidden">избранное</span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"><path fill="#000" d="M9.9 19a.9.9 0 0 1-.8-.4c-5.4-6.1-6.7-7.5-7-7.9A5.4 5.4 0 0 1 6.5 2C7.8 2 9 2.5 10 3.3a5.46 5.46 0 0 1 9 4.1c0 1.3-.5 2.5-1.3 3.4l-7 7.9c-.2.2-.4.3-.8.3Zm-6-9.5c.3.4 3.5 4 6.1 6.9l6.2-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.7 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4-.7-.8-1.7-1.3-2.7-1.3-1.8 0-3.3 1.5-3.3 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z"/></svg>
+                <svg class="hero-border" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"><path fill="#000" d="M9.9 19a.9.9 0 0 1-.8-.4c-5.4-6.1-6.7-7.5-7-7.9A5.4 5.4 0 0 1 6.5 2C7.8 2 9 2.5 10 3.3a5.46 5.46 0 0 1 9 4.1c0 1.3-.5 2.5-1.3 3.4l-7 7.9c-.2.2-.4.3-.8.3Zm-6-9.5c.3.4 3.5 4 6.1 6.9l6.2-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.7 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4-.7-.8-1.7-1.3-2.7-1.3-1.8 0-3.3 1.5-3.3 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z"/></svg>
                 <span class="notification-badge">12</span>
               </a>
             </li>
@@ -49,9 +49,10 @@
       </div>
     </header>
     <main class="main-index  main-container">
-      <section class="hero">
+      <section class="hero hero-border">
         <h1><span class="visually-hidden"> Город Sedona</span></h1>
         <img class="welcome" src="images/welcome-sedona.svg" width="458" height="352" alt="добро пожаловать в Седону">
+        <svg xmlns="http://www.w3.org/2000/svg" width="1200" height="57" fill="none"><path fill="#fff" d="M0 57V0l250 24V0l350 57L950 0v24l250-24v57H0Z"/></svg>
       </section>
       <div class="hero-advantages">
         <p class="lead">Седона — небольшой городок в Аризоне,
