--- a/catalog.html
+++ b/catalog.html
@@ -217,17 +217,17 @@
       </main>
       <footer class="main-footer">
         <ul class="social-list">
-          <li class="social-item">
+          <li class="social-item social-item-vk">
             <a href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Vk</span>
             </a>
           </li>
-          <li class="social-item">
+          <li class="social-item social-item-tg">
             <a href="https://t.me/htmlacademy">
               <span class="visually-hidden">TG</span>
             </a>
           </li>
-          <li class="social-item">
+          <li class="social-item social-item-yt">
             <a href="https://www.youtube.com/user/htmlacademyru">
               <span class="visually-hidden">YT</span>
             </a>
