--- a/catalog.html
+++ b/catalog.html
@@ -144,7 +144,7 @@
             <span class="product-card-price">От 4000 ₽</span>
             <a class="product-card-button" href="#">Подробнее</a>
             <a class="product-card-button-favorites" href="#">В избранноe</a>
-            <div class="stars"></div>
+            <div class="stars"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" fill="none"><g clip-path="url(#a)"><path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z"/></g><defs><clipPath id="a"><path fill="#fff" d="M0 0h18v17H0z"/></clipPath></defs></svg></div>
             <div class="rating">Рейтинг: 8,5</div>
           </li>
           <li class="product-card">
@@ -156,7 +156,7 @@
             <span class="product-card-price">От 5000 ₽</span>
             <a class="product-card-button" href="#">Подробнее</a>
             <a class="product-card-button-favorites" href="#">В избранноe</a>
-            <div class="stars"></div>
+            <div class="stars"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" fill="none"><g clip-path="url(#a)"><path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z"/></g><defs><clipPath id="a"><path fill="#fff" d="M0 0h18v17H0z"/></clipPath></defs></svg></div>
             <div class="rating">Рейтинг: 9,2</div>
           </li>
           <li class="product-card">
@@ -168,7 +168,7 @@
             <span class="product-card-price">От 2500 ₽</span>
             <a class="product-card-button" href="#">Подробнее</a>
             <a class="product-card-button-favorites" href="#">В избранноe</a>
-            <div class="stars"></div>
+            <div class="stars"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" fill="none"><g clip-path="url(#a)"><path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z"/></g><defs><clipPath id="a"><path fill="#fff" d="M0 0h18v17H0z"/></clipPath></defs></svg></div>
             <div class="rating">Рейтинг: 6,9</div>
           </li>
           <li class="product-card">
@@ -180,7 +180,7 @@
             <span class="product-card-price">От 1500 ₽</span>
             <a class="product-card-button" href="#">Подробнее</a>
             <a class="product-card-button-favorites" href="#">В избранноe</a>
-            <div class="stars"></div>
+            <div class="stars"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" fill="none"><g clip-path="url(#a)"><path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z"/></g><defs><clipPath id="a"><path fill="#fff" d="M0 0h18v17H0z"/></clipPath></defs></svg></div>
             <div class="rating">Рейтинг: 5,0</div>
           </li>
         </ul>
